--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,5 @@
-version: '3'
-
-services:
-postgres:
-image: 'postgres:13'
-container_name: 'java-postgres'
-ports:
-- 5432:5432
-environment:
-- 'POSTGRES_USER=sa'
-- 'POSTGRES_HOST_AUTH_METHOD=trust'
-- 'POSTGRES_DB=java'
+spring.datasource.url=jdbc:postgresql://localhost:5432/diploma
+spring.datasource.username=sashenka
+spring.datasource.password=123
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
